* Always convert from UTF-8 when marshalling QStringLists,   same as when we marshall a QString. Fixes a bug   reported by CedX.

BUG: 185783


svn path=/trunk/KDE/kdebindings/csharp/; revision=933255